tests-integration/tests/custom/semantic-errors/invalid-domain-01/stderr.expected
Error:
    model.eprime:1:13:
  |
1 | find x: int(10..5)
  |             ^^^^^
Invalid Domain


